-------------------------------------------------------------------------------
Changes in version 1.006

- Added uint16, uint32, and uint64 pack/unpack functions.

- Added 32 and 64 bit CRC functions.

- Changed the ipv4addr typedef to make explicit when it's being passed
  by reference.  This breaks source code compatibility with previous
  versions.

- Major internal reorganization moving many files into subdirectories.

- More portability fixes.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.005

- Portability fixes for *BSD (possibly others).

- #define MSG_NO_DEBUG before including <msg/msg.h> and no debugging
  messages will be compiled into the object code.

- Added long long str_cat*ll and obuf_put*ll functions.

- Added str_match simple pattern-matching function.

- Fixed the shadowed global variable naming conflicts.

- Flattened out and simplified the installed lib files.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.003

- Optimized path matching to only stat intermediate entries if they
  don't contain any meta-characters, instead of reading the entire
  directory and matching.
- Fixed a bug in str/cmp.c: it missed adding offset to the string
  pointer.
- Fixed bug in iobuf/[io]buf_seek.c -- seeks to the current read/write
  position should not cause an lseek syscall.
- The iobuf library now uses an anonymous mmap region for I/O instead of
  a malloced buffer, if possible.  Some OS's can optimize away a data
  copy using this kind of mechanism.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/