@@ -1,3 +1,4 @@
+random.o
 strtou.o
 utoa2.o
 utoa.o
